--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,18 @@ body{
 }
 .interface{
     background-color: transparent;
+    backdrop-filter: blur(7px);
     display: flex;
     flex-direction:column;
     padding: 40px;
-    width: 370px;
-    height: 400px;
-    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.2);
+    width: 320px;
+    height: 360px;
+    box-shadow: 0px 0px 12px 10px rgba(0,0,0,0.2);
+    border: solid 2px #a47dff;
     border-radius: 25px;
     text-align: center;
     margin:150px auto;
-    border: solid 2px #bda1ff;
+    
 }
 .msglogin{
     font-size: 15px;
@@ -29,18 +31,21 @@ body{
 }
 
 .form input{
+    border: none;
     border-radius: 20px;
-    padding: 10px 5px;
-    border: 2px solid #949494;
+    padding: 10px 5px;  
+    border-bottom: #fff solid 2px;   
     width: 250px;
     height: 35px;
     margin: 5px 0px;
     font-size: 16px;
     font-weight: 500;
     text-align: center;
+
     
 
 }
+
 button{
     border-radius: 20px;
     width:170px;
@@ -59,10 +64,10 @@ button:hover{
     transform: scale(1.08);
 }
 h3{
-    color: #fff;
+    color: #000000;
 }
 h3 a{
-    color: #a47dff;
+    color: #ffffff;
 }
 .registro{
     
